--- a/app/src/main/res/layout/main_card.xml
+++ b/app/src/main/res/layout/main_card.xml
@@ -14,104 +14,103 @@
 
 
     <EditText
-        android:id="@+id/editText"
+        android:id="@+id/etHitCount"
         android:layout_width="0dp"
-        android:layout_height="63dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="0dp"
         android:inputType="number"
         android:text="0"
         android:textAlignment="center"
-        android:textSize="30sp"
-        app:layout_constraintHorizontal_bias="0.0"
+        android:textSize="26sp"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toLeftOf="@+id/textView"
-        app:layout_constraintTop_toBottomOf="@+id/editText3"
-        android:layout_marginEnd="8dp" />
+        app:layout_constraintTop_toBottomOf="@+id/etTryCount" />
 
 
     <EditText
-        android:id="@+id/editText3"
+        android:id="@+id/etTryCount"
         android:layout_width="0dp"
-        android:layout_height="63dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="0dp"
         android:inputType="number"
         android:text="10"
         android:textAlignment="center"
-        android:textSize="30sp"
-        app:layout_constraintHorizontal_bias="0.0"
+        android:textSize="26sp"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toLeftOf="@+id/textView"
-        app:layout_constraintTop_toBottomOf="@+id/editText2"
-        android:layout_marginEnd="8dp" />
+        app:layout_constraintTop_toBottomOf="@+id/etProbability" />
 
     <EditText
-        android:id="@+id/editText2"
+        android:id="@+id/etProbability"
         android:layout_width="0dp"
-        android:layout_height="63dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="0dp"
         android:inputType="number"
-        android:singleLine="true"
         android:text="0.01"
         android:textAlignment="center"
-        android:textSize="30sp"
-        app:layout_constraintHorizontal_bias="0.511"
+        android:textSize="26sp"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toLeftOf="@+id/textView"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginEnd="8dp" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginTop="16dp"
-        android:text="回 やったら"
+        android:text="回 まわしたら"
         android:textSize="20sp"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/editText3"
-        app:layout_constraintLeft_toLeftOf="@+id/textView3"
+        app:layout_constraintBottom_toBottomOf="@+id/etTryCount"
         app:layout_constraintHorizontal_bias="0.0"
-        android:layout_marginEnd="8dp" />
+        app:layout_constraintLeft_toLeftOf="@+id/textView3"
+        app:layout_constraintRight_toRightOf="parent" />
 
     <TextView
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginRight="7dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginRight="22dp"
         android:text="回 しか当たりが…"
         android:textSize="20sp"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/editText"
-        android:layout_marginEnd="7dp" />
+        android:layout_marginEnd="7dp"
+        app:layout_constraintBottom_toBottomOf="@+id/etHitCount"
+        android:layout_marginBottom="8dp" />
 
     <TextView
         android:id="@+id/textView2"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginRight="8dp"
-        android:layout_marginTop="16dp"
         android:text="% のガチャを"
         android:textSize="20sp"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="@+id/textView3"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/editText2"
-        android:layout_marginEnd="8dp" />
+        android:layout_marginEnd="8dp"
+        app:layout_constraintBottom_toBottomOf="@+id/etProbability"
+        android:layout_marginBottom="8dp" />
 
     <Button
         android:layout_width="0dp"
-        android:layout_height="70dp"
+        android:layout_height="wrap_content"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="8dp"
         android:text="判定！"
-        android:textSize="40sp"
+        android:textSize="26sp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText" />
+        app:layout_constraintTop_toBottomOf="@+id/etHitCount" />
 </android.support.constraint.ConstraintLayout>
