--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -42,13 +42,14 @@
         android:visibility="gone"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:background="#77000000"
+        android:background="#99000000"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:layout_editor_absoluteX="0dp"
         android:layout_marginTop="0dp"
+        android:clickable="true"
         app:layout_constraintVertical_bias="0.0">
 
         <LinearLayout
